[package]
name = "portal"
version = "0.1.0"
authors = ["r-ym <ramanyachi@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.0"
wasm-bindgen = "0.2"


# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
getrandom = { version = "0.2", features = ["wasm-bindgen"] }
bevy_webgl2 = "0.5"